@@ -14,6 +14,7 @@ v7.12.1
   - Improved Lint stability
   - Add warning when .gitlab-ci.yml not found
   - Add one more validation rule for .gitlab-ci.yml
+  - Fix list of branches in only section
 
 v7.12.0
   - Endless scroll on the dashboard
